new html, css and js structure

--- a/style.css
+++ b/style.css
@@ -23,11 +23,6 @@ body{
 
     background-color: var(--bg);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
     overflow: hidden;
 }
 
@@ -35,7 +30,10 @@ main{
     width: 80%;
     max-width: 600px;
 
-    font-size: 1.1em;
+    transform: translate(-50%, -50%);
+    position: relative;
+    top: 50%;
+    left: 50%;
 
     padding: 25px;
 
@@ -48,14 +46,19 @@ main{
     text-align: center;
 }
 
-h1{
-    text-align: center;
-
-    margin-bottom: 20px;
+.phrase{
+    font-size: 1.9em;
+    font-weight: 600;
 }
 
-p{
-    text-align: right;
+.author{
+    font-size: 1.3em;
+    font-weight: 400;
+
+    position: relative;
+    right: -120px;
+
+    margin-top: 10px;
 }
 
 button{
@@ -65,7 +68,7 @@ button{
     background-color: var(--btn-inactive);
     border: none;
 
-    margin-top: 30px;
+    margin-top: 15px;
 
     border-radius: 5px;
 
