--- a/style.css
+++ b/style.css
@@ -26,6 +26,30 @@ body{
     overflow: hidden;
 }
 
+.languageSelect{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+
+    padding: 3px 10px;
+
+    border-radius: 3px;
+
+    background-color: var(--main-bg);
+}
+
+.languageSelect button{
+    font-size: 1.5em;
+
+    background-color: transparent;
+
+    border: none;
+}
+
+.languageSelect button:nth-child(2){
+    margin-left: 5px;
+}
+
 main{
     width: 80%;
     max-width: 600px;
@@ -60,7 +84,7 @@ main{
     margin-top: 10px;
 }
 
-button{
+.btnNewPhrase{
     width: 80%;
     max-width: 600px;
 
@@ -80,7 +104,7 @@ button{
     cursor: pointer;
 }
 
-button:hover{
+.btnNewPhrase:hover{
     background-color: var(--btn-active);
     color: var(--text);
 }
