--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@
     --main-bg: #0B0B0B;
     --btn-inactive: #0B0B0B;
     --btn-active: #000000;
+
+    --br-green: #009b3a; 
+    --br-yellow: #fedf01;
+    --br-blue: #002776;
+
+    --usa-red: #b22334;
+    --usa-blue: #3c3b6e;
+    --usa-white: #ffffff
 }
 
 body{
@@ -31,23 +39,106 @@ body{
     right: 20px;
     top: 20px;
 
-    padding: 3px 10px;
+    padding: 6px 8px;
+
+    display: flex;
+    flex-direction: row;
 
     border-radius: 3px;
 
     background-color: var(--main-bg);
 }
 
-.languageSelect button{
-    font-size: 1.5em;
+.languageSelect::before{
+    content: '';
+    display: block;
 
-    background-color: transparent;
+    width: 26px;
+    height: 2px;
 
-    border: none;
+    position: absolute;
+    left: 9px;
+    top: 26px;
+
+    background-color: white;
+
+    border-radius: 4px;
 }
 
-.languageSelect button:nth-child(2){
-    margin-left: 5px;
+.flag{
+    width: 28px;
+    height: 18px;
+
+    border-radius: 2px;
+}
+
+.flag:nth-child(2n){
+    margin-left: 6px;
+}
+
+.br{
+    background-color: var(--br-green);
+}
+
+.br::before{
+    content: '';
+    display: block;
+
+    width: 10px;
+    height: 10px;
+
+    background-color: var(--br-yellow);
+
+    transform: translate(-50%, -50%) rotate(45deg);
+    position: relative;
+    top: 50%;
+    left: 50%;
+
+    border-radius: 1px;
+
+    z-index: 2;
+}
+
+.usa{
+    background-color: var(--usa-red);
+
+    overflow: hidden;
+}
+
+.usa::before{
+    content: '';
+    display: block;
+
+    width: 100%;
+    height: 2px;
+    
+    position: relative;
+    top: 5px;
+
+    background-color: var(--usa-white);
+}
+
+.usa::after{
+    content: '';
+    display: block;
+
+    width: 100%;
+    height: 2px;
+    
+    position: relative;
+    top: 2px;
+
+    background-color: var(--usa-white);
+}
+
+.usa-blue{
+    width: 10px;
+    height: 8px;
+
+    position: relative;
+    top: -2px;
+
+    background-color: var(--usa-blue);
 }
 
 main{
