--- a/style.css
+++ b/style.css
@@ -49,8 +49,7 @@ body{
     background-color: var(--main-bg);
 }
 
-.languageSelect::before{
-    content: '';
+.languageBar{
     display: block;
 
     width: 24px;
@@ -63,6 +62,8 @@ body{
     background-color: white;
 
     border-radius: 4px;
+
+    transition: 0.3s;
 }
 
 .flag{
