sentence size adjustment for mobile phones

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@400;500;600&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
 
+@media (max-width: 767px) {
+    .phrase{
+        font-size: 1.6em;
+    }
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -203,6 +209,45 @@ main{
     color: var(--text);
 }
 
+.modal{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+
+    background-color: rgba(0, 0, 0, 0.5);
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 5;
+}
+
+.contentLoading{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 10px;
+
+    background-color: rgba(0, 0, 0, 1);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading{
+    width: 50px;
+    height: 50px;
+
+    border: 4px solid rgba(255, 255, 255, 0.137);
+    border-top-color: white;
+    border-radius: 50%;
+
+    animation: 1s infinite loading;
+}
+
 footer{
     width: 100%;
 
@@ -244,3 +289,5 @@ i:hover{
 a:nth-child(2n){
     margin-left: 15px;
 }
+
+
